log/build_2025-02-16_14-10-24/my_robot_controller/stderr.log
  File "/media/ros/fedora/home/maylis/Dokumente/TeleNav/install/my_robot_controller/lib/python3.10/site-packages/my_robot_controller/battery_node.py", line 4
    from 
         ^
SyntaxError: invalid syntax

